--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -17,24 +17,20 @@
     width: 92%;
     max-width: 1220px;
     margin: 0 auto;
-  }
-
-  @media (min-width: $desktop-width) {
-    background-color: $background-additional-color;
+    padding-top: 24px;
   }
 }
 
 .main-nav__inner-wrapper {
   display: flex;
   align-items: center;
-  justify-content: space-between;
 }
 
 .main-nav__logo {
   display: flex;
+  flex-direction: column;
+  justify-content: center;
   min-height: 65px;
-  flex-grow: 2;
-  justify-content: space-between;
 
   &:hover {
     opacity: 0.8;
@@ -45,14 +41,40 @@
   }
 }
 
-.main-nav__logo-image,
-.main-nav__logo-text-image {
-  display: block;
+.main-nav__logo-text {
+  flex-grow: 2;
+  text-align: center;
+
+  &:hover {
+    opacity: 0.8;
+  }
+
+  &:active {
+    opacity: 0.6;
+  }
+
+  @media (min-width: $tablet-width) {
+    display: none;
+  }
 }
 
+.main-nav__logo-image,
 .main-nav__logo-text-image {
-  margin-right: auto;
-  margin-left: auto;
+  display: inline-block;
+}
+
+.main-nav__logo-image {
+  width: 33px;
+  height: 37px;
+
+  @media (min-width: $tablet-width) {
+    width: 174px;
+    height: auto;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 202px;
+  }
 }
 
 .main-nav__toggle {
