--- a/source/sass/blocks/product-card.scss
+++ b/source/sass/blocks/product-card.scss
@@ -25,12 +25,18 @@
 
 .product-card__image {
   display: inline-block;
+  width: 140px;
+  height: 112px;
 
   @media (min-width: $tablet-width) {
+    width: 168px;
+    height: 200px;
     margin-bottom: 34px;
   }
 
   @media (min-width: $desktop-width) {
+    width: 172px;
+    height: 196px;
     margin-bottom: 46px;
   }
 }
