--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -68,6 +68,10 @@
     background-color: #68b738;
   }
 
+  .site-list__item--active-index a::after {
+    background-color: $font-alternative-color;
+  }
+
   .site-list__link {
     font-weight: 400;
     font-size: 18px;
@@ -81,23 +85,24 @@
   .site-list {
     width: 478px;
     background-color: transparent;
-  }
 
-  .site-list__link {
-    font-size: 20px;
-    line-height: 30px;
-    color: $font-alternative-color;
+    &--index {
+      .site-list__link {
+        color: $font-alternative-color;
 
-    &:hover {
-      color: rgba(255, 255, 255, 0.6);
+        &:hover {
+          color: rgba(255, 255, 255, 0.6);
+        }
+
+        &:active {
+          color: rgba(255, 255, 255, 0.3);
+        }
+      }
     }
 
-    &:active {
-      color: rgba(255, 255, 255, 0.3);
+    .site-list__link {
+      font-size: 20px;
+      line-height: 30px;
     }
-  }
-
-  .site-list__item--active a::after {
-    background-color: $font-alternative-color;
   }
 }
