--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -32,5 +32,6 @@
 @use "blocks/link-all-items.scss";
 @use "blocks/additional-products.scss";
 @use "blocks/list-add-products.scss";
+@use "blocks/promo-gift.scss";
 @use "blocks/program-selection.scss";
 @use "blocks/selection-form.scss";
