--- a/source/sass/blocks/reasons-list.scss
+++ b/source/sass/blocks/reasons-list.scss
@@ -8,6 +8,7 @@
   font-size: 14px;
   line-height: 18px;
   color: $font-additional-color;
+  counter-reset: program;
 
   @media (min-width: $tablet-width) {
     display: grid;
@@ -66,30 +67,35 @@
 
     &--reason-1 {
       width: 230px;
-      background-image: url("../img/benefits/background-1.svg");
-      background-position: right 34px bottom 13px;
     }
 
     &--reason-2 {
       width: 246px;
-      background-image: url("../img/benefits/background-2.svg");
-      background-position: right 10px bottom 13px;
     }
 
     &--reason-3 {
       width: 247px;
-      background-image: url("../img/benefits/background-3.svg");
-      background-position: right 10px bottom 13px;
     }
 
     &--reason-4 {
       width: 249px;
-      background-image: url("../img/benefits/background-4.svg");
-      background-position: right 0 bottom 13px;
     }
 
     &::before {
       top: 40px;
+    }
+
+    &::after {
+      counter-increment: program;
+      content: counter(program);
+      position: absolute;
+      top: 0;
+      right: 0;
+      font-family: "Oswald", sans-serif;
+      font-size: 280px;
+      line-height: 280px;
+      color: #f2f2f2;
+      z-index: -1;
     }
   }
 
