--- a/source/sass/blocks/reasons-list.scss
+++ b/source/sass/blocks/reasons-list.scss
@@ -18,6 +18,7 @@
 
   @media (min-width: $desktop-width) {
     grid-template-columns: auto auto auto auto;
+    row-gap: 110px;
   }
 }
 
@@ -41,6 +42,11 @@
     background-color: #68b738;
     background-position: center;
     background-repeat: no-repeat;
+
+    @media (min-width: $tablet-width) {
+      width: 80px;
+      height: 80px;
+    }
   }
 
   &--reason-1::before {
