--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -23,6 +23,7 @@
   @media (min-width: $tablet-width) {
     width: 92%;
     max-width: 1220px;
+    padding-top: 60px;
     margin: 0 auto;
     margin-bottom: 68px;
   }
