--- a/source/sass/blocks/input.scss
+++ b/source/sass/blocks/input.scss
@@ -17,11 +17,11 @@
   &:focus {
     outline: 2px solid #444444;
 
-    & + .input__icon--phone {
+    & + .input-icon--phone {
       fill: #68b738;
     }
 
-    & + .input__icon--email {
+    & + .input-icon--email {
       stroke: #68b738;
     }
   }
@@ -29,11 +29,11 @@
   &--error {
     outline: 2px solid #ff8282;
 
-    & + .input__icon--phone {
+    & + .input-icon--phone {
       fill: #ff8282;
     }
 
-    & + .input__icon--email {
+    & + .input-icon--email {
       stroke: #ff8282;
     }
   }
@@ -49,7 +49,7 @@
   position: relative;
 }
 
-.input__icon {
+.input-icon {
   position: absolute;
   width: 20px;
   height: 20px;
