--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -8,7 +8,6 @@
 
 .main-nav__wrapper {
   position: relative;
-  padding: 0 20px;
 
   @media (min-width: $tablet-width) {
     display: flex;
@@ -24,6 +23,11 @@
 .main-nav__inner-wrapper {
   display: flex;
   align-items: center;
+  padding: 0 20px;
+
+  @media (min-width: $tablet-width) {
+    padding: 0;
+  }
 }
 
 .main-nav__logo {
@@ -126,14 +130,6 @@
   }
 }
 
-.main-nav--nojs .main-nav__toogle {
-  display: none;
-}
-
-.main-nav--nojs .main-nav__list {
-  position: static;
-}
-
 .main-nav--opened .main-nav__list {
   position: absolute;
   z-index: 10;
@@ -144,5 +140,20 @@
 @media (max-width: $mobile-width-only) {
   .main-nav--closed .main-nav__list {
     display: none;
+  }
+
+  .main-nav--nojs .main-nav__toggle {
+    display: none;
+  }
+
+  .main-nav--nojs .main-nav__inner-wrapper {
+    justify-content: start;
+    padding-right: 44px;
+  }
+
+
+  .main-nav--nojs .main-nav__list {
+    display: block;
+    position: static;
   }
 }
