--- a/source/sass/blocks/map.scss
+++ b/source/sass/blocks/map.scss
@@ -1,17 +1,21 @@
 @import "../base/variables";
 
 .map {
-  @media (min-width: $tablet-width) {
-    width: 100%;
-    max-width: 1440px;
-  }
+  width: 100%;
+  height: 362px;
 
-  @media (min-width: $desktop-width) {
-    width: 1440px;
+  @media (min-width: $tablet-width) {
+    height: 400px;
   }
 }
 
 .map iframe {
+  width: 100%;
+  height: 362px;
   border: none;
   display: block;
+
+  @media (min-width: $tablet-width) {
+    height: 400px;
+  }
 }
