--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -13,6 +13,10 @@
   &:first-child {
     border-top: 1px solid #e6e6e6;
   }
+
+  @media (max-width: $mobile-width-only) {
+    padding: 0 20px;
+  }
 }
 
 .site-list__link {
