--- a/source/sass/blocks/line-title.scss
+++ b/source/sass/blocks/line-title.scss
@@ -4,6 +4,7 @@
   display: inline-block;
   position: relative;
   padding-right: 22px;
+  background-color: $background-primary-color;
 
   @media (min-width: $tablet-width) {
     padding-right: 40px;
@@ -13,13 +14,6 @@
     &--add-products {
       padding-left: 36px;
       margin-left: 0;
-    }
-
-    @media (min-width: $desktop-width) {
-      &--add-products {
-        padding-left: 36px;
-        margin-left: -36px;
-      }
     }
 
     &::before {
@@ -35,15 +29,28 @@
     }
   }
 
+  @media (min-width: $desktop-width) {
+    &--add-products {
+      padding-left: 36px;
+      margin-left: -36px;
+    }
+  }
+
   &::after {
     content: "";
     position: absolute;
     top: 50%;
-    left: 100%;
+    left: 0;
     width: 100vw;
     height: 3px;
     margin-top: 2px;
     background: #68b738;
     z-index: -1;
+  }
+}
+
+.line-title--contacts::after {
+  @media (max-width: $desktop-width) {
+    top: 25%;
   }
 }
