--- a/source/sass/blocks/main-footer.scss
+++ b/source/sass/blocks/main-footer.scss
@@ -69,6 +69,9 @@
 
 .main-footer__copyright {
   display: flex;
+  font-family: "Arial", sans-serif;
+  font-size: 16px;
+  line-height: 18px;
   justify-content: space-between;
   align-items: center;
   padding-top: 20px;
