--- a/source/sass/blocks/additional-products.scss
+++ b/source/sass/blocks/additional-products.scss
@@ -9,7 +9,7 @@
     width: 92%;
     max-width: 1220px;
     margin: 0 auto;
-
+    margin-bottom: 76px;
     min-height: 820px;
   }
 
@@ -42,10 +42,10 @@
 
 
 .additional-products__title {
-  margin: 0;
   font-weight: 400;
   font-size: 24px;
   line-height: 24px;
+  margin-top: 0;
   margin-bottom: 49px;
 
   @media (min-width: $tablet-width) {
