--- a/source/sass/blocks/benefit-reasons.scss
+++ b/source/sass/blocks/benefit-reasons.scss
@@ -1,14 +1,16 @@
 @import "../base/variables";
 
 .benefit-reasons {
-  margin-bottom: 43px;
+  margin-bottom: 46px;
 
   @media (min-width: $tablet-width) {
     border-bottom: 1px solid #e6e6e6;
+    margin-bottom: 40px;
   }
 
   @media (min-width: $desktop-width) {
     border: none;
+    margin-bottom: 26px;
   }
 }
 
@@ -19,10 +21,9 @@
   @media (min-width: $tablet-width) {
     width: 92%;
     max-width: 1240px;
-    min-height: 782px;
     margin: 0 auto;
-    margin-bottom: 47px;
-    padding-top: 46px;
+    padding-top: 50px;
+    padding-bottom: 47px;
   }
 
   @media (min-width: $desktop-width) {
@@ -30,6 +31,7 @@
     min-height: 280px;
     padding-top: 71px;
     padding-right: 0;
+    padding-bottom: 0;
   }
 }
 
