--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -2,7 +2,7 @@
 
 .button {
   display: block;
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-weight: 400;
   text-transform: uppercase;
   text-decoration: none;
