--- a/source/sass/blocks/comment-input.scss
+++ b/source/sass/blocks/comment-input.scss
@@ -1,9 +1,10 @@
 @import "../base/variables";
 
 .comment-input {
+  box-sizing: border-box;
   min-height: 150px;
   resize: none;
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 18px;
