--- a/source/sass/blocks/link-all-items.scss
+++ b/source/sass/blocks/link-all-items.scss
@@ -39,10 +39,10 @@
   }
 
   @media (min-width: $tablet-width) {
+    box-sizing: border-box;
     padding: 0 36px;
     padding-top: 160px;
-    padding-bottom: 41px;
-    margin-top: 74px;
+    margin-top: 80px;
     min-height: 245px;
     border: 2px solid #f2f2f2;
   }
