--- a/source/sass/blocks/list-add-products.scss
+++ b/source/sass/blocks/list-add-products.scss
@@ -10,7 +10,7 @@
   &::before {
     content: "";
     position: absolute;
-    top: -13px;
+    top: -26px;
     left: 0;
     width: 100%;
     height: 1px;
@@ -20,6 +20,10 @@
   @media (min-width: $desktop-width) {
     width: 896px;
     padding: 0;
+
+    &::before {
+      top: 0;
+    }
   }
 }
 
