--- a/source/sass/blocks/list-products.scss
+++ b/source/sass/blocks/list-products.scss
@@ -39,6 +39,10 @@
   position: relative;
   margin-bottom: 19px;
 
+  @media (max-width: $mobile-width-only) {
+    display: grid;
+  }
+
   @media (min-width: $tablet-width) {
     margin-bottom: 0;
   }
@@ -56,6 +60,46 @@
       display: none;
     }
   }
+}
+
+.product-card__title-link {
+  color: inherit;
+  text-decoration: none;
+
+  @media (max-width: $mobile-width-only) {
+    grid-row-start: 1;
+    grid-row-end: 2;
+    grid-column-start: 2;
+    grid-column-end: -1;
+  }
+}
+
+.product-card__image-link {
+  @media (max-width: $mobile-width-only) {
+    grid-row-start: 1;
+    grid-row-end: 3;
+    grid-column-start: 1;
+    grid-column-end: 2;
+  }
+}
+
+.product-card__description {
+  @media (max-width: $mobile-width-only) {
+    grid-row-start: 2;
+    grid-row-end: 3;
+    grid-column-start: 2;
+    grid-column-end: -1;
+  }
+}
+
+.product-card__title-link:hover ~ .product-card__button,
+.product-card__image-link:hover ~ .product-card__button {
+  background-color: #5eaa2f;
+}
+
+.product-card__title-link:active ~ .product-card__button,
+.product-card__image-link:active ~ .product-card__button {
+  color: rgba($color: #ffffff, $alpha: 0.3);
 }
 
 .list-products__link-all {
