--- a/source/sass/blocks/map.scss
+++ b/source/sass/blocks/map.scss
@@ -10,12 +10,36 @@
 }
 
 .map iframe {
+  display: none;
   width: 100%;
   height: 362px;
   border: none;
-  display: block;
 
   @media (min-width: $tablet-width) {
     height: 400px;
+  }
+}
+
+.map--js iframe {
+  display: block;
+}
+
+.map__image {
+  display: none;
+  margin: 0 auto;
+  height: 362px;
+  width: 320px;
+
+  &--nojs {
+    display: block;
+  }
+
+  @media (min-width: $tablet-width) {
+    width: 768px;
+    height: 400px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 1440px;
   }
 }
