--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -7,8 +7,9 @@
 .page__body {
   box-sizing: border-box;
   min-height: 100%;
+  max-width: 100%;
   margin: 0;
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-weight: 400;
   color: $font-primary-color;
   overflow-x: hidden;
