--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -5,6 +5,15 @@
   padding: 0;
   margin: 0;
   background-color: $background-primary-color;
+
+  @media (min-width: $tablet-width) {
+    padding-top: 16px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 10px;
+    padding-right: 2px;
+  }
 }
 
 .site-list__item {
@@ -65,7 +74,7 @@
   .site-list__item--active a::after {
     content: "";
     position: absolute;
-    bottom: 0;
+    bottom: 4px;
     right: 0;
     left: 0;
     height: 2px;
