--- a/source/sass/blocks/link-all-items.scss
+++ b/source/sass/blocks/link-all-items.scss
@@ -20,6 +20,10 @@
       top: 51px;
       height: 60px;
     }
+
+    @media (min-width: $desktop-width) {
+      top: 54px;
+    }
   }
 
   &::after {
@@ -36,6 +40,10 @@
       top: 51px;
       height: 60px;
     }
+
+    @media (min-width: $desktop-width) {
+      top: 54px;
+    }
   }
 
   @media (min-width: $tablet-width) {
@@ -45,6 +53,11 @@
     margin-top: 80px;
     min-height: 245px;
     border: 2px solid #f2f2f2;
+  }
+
+  @media (min-width: $desktop-width) {
+    min-height: 230px;
+    margin-top: 86px;
   }
 }
 
@@ -100,5 +113,9 @@
 
   &:active {
     color: rgba(68, 68, 68, 0.3);
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 8px 0;
   }
 }
