--- a/source/sass/blocks/nutrition-program.scss
+++ b/source/sass/blocks/nutrition-program.scss
@@ -27,7 +27,7 @@
 }
 
 .nutrition-program__inner-wrapper {
-  min-height: 475px;
+  min-height: 476px;
   padding: 0 20px;
   padding-top: 26px;
 
@@ -36,14 +36,14 @@
     width: 92%;
     max-width: 1220px;
     margin: 0 auto;
-    padding-top: 28px;
+    padding-top: 32px;
     min-height: 810px;
   }
 
   @media (min-width: $desktop-width) {
     padding-top: 80px;
     min-height: auto;
-    padding-bottom: 186px;
+    padding-bottom: 184px;
   }
 }
 
@@ -89,7 +89,7 @@
   line-height: 14px;
   text-transform: uppercase;
   margin: 0;
-  margin-bottom: 30px;
+  margin-bottom: 32px;
 
   @media (min-width: $tablet-width) {
     font-size: 20px;
@@ -100,6 +100,7 @@
 
   @media (min-width: $desktop-width) {
     margin-left: 80px;
+    margin-bottom: 52px;
     position: relative;
     z-index: 10;
   }
@@ -109,10 +110,13 @@
   display: block;
   width: 280px;
   height: 270px;
+  margin-bottom: 2px;
+
 
   @media (min-width: $tablet-width) {
     position: absolute;
     bottom: 0;
+    margin-bottom: 0;
     left: 50%;
     transform: translateX(-50%);
     width: 709px;
@@ -135,7 +139,7 @@
   width: 100%;
   font-size: 14px;
   line-height: 18px;
-  padding: 7px 0;
+  padding: 12px 0;
 
   @media (min-width: $tablet-width) {
     display: inline-block;
@@ -143,7 +147,7 @@
     width: auto;
     font-size: 20px;
     line-height: 20px;
-    padding: 16px 26px;
+    padding: 18px 26px;
   }
 
   @media (min-width: $desktop-width) {
