--- a/source/sass/blocks/selection-form.scss
+++ b/source/sass/blocks/selection-form.scss
@@ -12,6 +12,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     column-gap: 80px;
+    margin-bottom: 68px;
   }
 }
 
@@ -42,7 +43,7 @@
     }
 
     @media (min-width: $desktop-width) {
-      margin-bottom: 70px;
+      margin-bottom: 66px;
     }
   }
 
@@ -66,7 +67,7 @@
     }
 
     @media (min-width: $desktop-width) {
-      margin-bottom: 46px;
+      margin-bottom: 50px;
     }
   }
 }
@@ -211,7 +212,7 @@
 
   @media (min-width: $desktop-width) {
     margin-right: 104px;
-    margin-bottom: 10px;
+    margin-bottom: 12px;
 
     &:nth-child(2) {
       margin-right: 137px;
@@ -298,7 +299,9 @@
   line-height: 16px;
 
   @media (min-width: $tablet-width) {
+    position: relative;
     display: inline-block;
+    top: -4px;
     font-size: 16px;
   }
 }
