--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -8,6 +8,10 @@
   list-style: none;
   margin: 0;
   padding: 0;
+
+  @media (min-width: $tablet-width) {
+    padding-left: 26px;
+  }
 }
 
 .social__link {
